--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Payeer Bonus"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JZABZnjoFc2JXK6TjtYGNLnb8gKpF6M9PrgTQegrKeE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://earn-bonus.uz
+APP_PORT=200
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -10,10 +11,12 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=3001
+DB_DATABASE=payeer_bonus
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=example
+DB_ROOT_PASSWORD=example
+FORWARD_DB_PORT=3001
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,17 +27,17 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
+REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=firdavsreadmi8@gmail.com
+MAIL_PASSWORD=bgytszqnnavneydu
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="no_reply@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -56,3 +59,18 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELEGRAM_BOT_TOKEN=6237583395:AAE1kANvdCrH0O7FNYoBH2o10dwR18m0hKs
+TELEGRAM_USER_ID=1424056326
+
+GOOGLE_RECAPTCHA_SECRET="6Lc-nIwkAAAAAMWMqnJJWd2Uy_BBcgKsVmYt-Yc9"
+GOOGLE_RECAPTCHA_KEY="6Lc-nIwkAAAAAJAPAA0mRfhbcDctp0G5jftCqGFO"
+
+PAYEER_SECRET=cVEc2K56n9hrxu6p
+PAYEER_ID=1833551784
+
+PAYEER_API_KEY=Gr7yJ2RZ7EBTLGv3
+PAYEER_API_SECRET=jskbcajkcbu3yqcoUGjhasd
+
+WWWGROUP=1000
+WWWUSER=1000
