--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=firdavsreadmi8@gmail.com
-MAIL_PASSWORD=bgytszqnnavneydu
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="no_reply@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
